--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,6 @@
 <%- layout('layouts/boilerplate') %>
+<link rel="stylesheet" href="/stylesheets/index.css" />
+<link rel="stylesheet" href="/stylesheets/stars.css" />
 
 <div class="container">
   <div class="btn-container d-flex justify-content-center">
@@ -8,21 +10,50 @@
   </div>
 
   <div class="title-card text-center mt-3">Crypto Tracker</div>
-  <table>
+  <table class="w-100">
+    <thead class="text-center">
+      <tr>
+        <th class="pb-3">Rank</th>
+        <th class="pb-3">Image</th>
+        <th class="pb-3">Name (abv)</th>
+        <th class="pb-3">Price</th>
+        <th class="pb-3">24h % Change</th>
+        <th class="pb-3">Favorite?</th>
+      </tr>
+    </thead>
     <% for (let item of listings) { %>
-    <tr>
-      <td><%=item.market_cap_rank%></td>
-      <td><img src="<%=item.image%>" alt="" class="item-image" /></td>
-      <td><%=item.name%> (<%=item.symbol%>)</td>
-      <td>
-        <% if(item.current_price > 0.01) { %>
-        <!-- If current price is more than .01, only display 2 decimal points -->
-        <%=item.current_price.toFixed(2)%> <% } else { %>
-        <!-- Else display all the decimal points -->
-        <%=item.current_price%> <% } %>
-      </td>
-      <td><%=item.price_change_percentage_24h_in_currency.toFixed(2)%> %</td>
-    </tr>
+    <form action="/<%=item.market_cap_rank%>/favorites?_method=PUT" method="POST">
+      <tr>
+        <td class="text-center pb-3"><%=item.market_cap_rank%></td>
+        <td class="text-center pb-3 image-cell">
+          <img src="<%=item.image%>" alt="" class="item-image" />
+        </td>
+        <td class="text-center pb-3">
+          <a href="https://www.coingecko.com/en/coins/<%=item.id%>" class="item-link"><%=item.name%> (<%=item.symbol%>)</a>
+        </td>
+        <td class="text-center pb-3">
+          <% if(item.current_price > 0.01) { %>
+          <!-- If current price is more than .01, only display 2 decimal points -->
+          $<%=item.current_price.toFixed(2)%> <% } else { %>
+          <!-- Else display all the decimal points -->
+          $<%=item.current_price%> <% } %>
+        </td>
+        <td class="text-center pb-3 ps-5 pe-5"><%=item.price_change_percentage_24h_in_currency.toFixed(2)%> %</td>
+        <td class="text-center pb-3">
+          <button class="btn">
+            <%if(user && user.favorites.includes(item.name)) {%>
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="yellow" class="bi bi-star-fill" viewBox="0 0 16 16">
+              <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+            </svg>
+            <% } else { %>
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-star" viewBox="0 0 16 16">
+              <path d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288L8 2.223l1.847 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.565.565 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z" />
+            </svg>
+            <% } %>
+          </button>
+        </td>
+      </tr>
+    </form>
     <% } %>
   </table>
 </div>
