--- a/views/partials/userForms.ejs
+++ b/views/partials/userForms.ejs
@@ -6,6 +6,8 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
+        <div class="text-start offset-3">Username : admin</div>
+        <div class="text-start offset-3 mb-5">Password : password</div>
         <form action="/login" method="POST" class="needs-validation" novalidate>
           <div class="mb-3">
             <label class="form-label" for="username">Username</label>
